--- a/TSY_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TSY_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -153,7 +153,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-TSY_Project.TimeStamp=2024.07.18-06.40.11
+TSY_Project.TimeStamp=2024.07.18-08.10.49
 TSY_Project.LastCompileMethod=External
 PakFile.TimeStamp=2024.05.20-08.48.16
 PakFile.LastCompileMethod=Unknown
@@ -995,7 +995,7 @@ MovieSceneCapture.TimeStamp=2024.05.20-08.48.14
 MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1675,7 +1675,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=346.286 Y=193.143
-WindowSize=X=1508.000 Y=948.000
+WindowSize=X=1520.000 Y=960.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
